# tracemap

./: .gitignore  AGENTS.md  CODEX_FOLLOWUP_PROMPTS.md  CODEX_INITIAL_PROMPT.md  MILESTONES.md  NAMING.md  README.md  README_Codex_Handoff.md  TraceMap.sln  amplify.yml
docs/: ACCEPTANCE.md  ADAPTER_RUNWAY.md  BASE44_STATIC_EVIDENCE_ADAPTER.md  COMPETITIVE_POSITIONING.md  DECISIONS.md  EVIDENCE_DOCS_EXPORT.md  LANGUAGE_ADAPTER_CONTRACT.md  LEGACY_BASELINES.md  NEXT_EXECUTION_REPORT.md  POSITIONING_STORY.md  POSTGRES_ARCHIVE_LINK_EVIDENCE.md  POSTGRES_PERMISSION_EVIDENCE.md  POSTGRES_SCHEMA_MIGRATION_EVIDENCE.md  PRD.md  PRODUCT_THESIS.md  PR_REVIEW_LOOP.md  SQL_EXECUTION_CONTEXT.md  SQL_OPERATOR_RUNBOOK_PACKET.md  SQL_SECRET_SAFETY.md  SQL_VALIDATION_HARNESS.md  SQL_VALIDATION_OPERATOR_PACKET.md  STATIC_HTML_EVIDENCE_EXPLORER.md  VALIDATION.md  VAULT_EXPORT.md
rules/: rule-catalog.yml
samples/: appsettings.json  contract-delta.example.json  customer-report.sql  portfolio.example.json  tracemap.yml
scripts/: check-private-paths.sh  demo-public-assert.mjs  demo-public.sh  kiro-review.mjs  legacy-codebase-validation.mjs  legacy-codebase-validation.test.mjs  legacy-sample-smoke-catalog.mjs  legacy-sample-smoke-catalog.test.mjs  (+12 more)
src/python/: README.md  pyproject.toml
src/python/tests/: test_python_adapter.py
src/python/tracemap_py/: ast_extractor.py  cli.py  config_extractor.py  constants.py  engine.py  fact_factory.py  git_metadata.py  hashes.py  inventory.py  metadata.py  models.py  pathing.py  report.py  route.py  sql_extractor.py  sql_text.py  writers.py
(+1525 files in other folders)
