[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemap-py"
version = "0.1.0"
description = "Deterministic Python adapter for TraceMap"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tracemap-py = "tracemap_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracemap_py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
